# aida-chat

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  OVERVIEW.md  PROMPT_HISTORY.md  metadata.yaml  oplog.yaml
.aida/: canned-answers.toml  config.toml  mcp-cache.yaml  node.toml
.claude/: AIDA.md
.claude/skills/: aida-implement.md  aida-import-plan.md  aida-review.md
.codex/skills/aida-backlog-groom/: SKILL.md
.codex/skills/aida-commit/: SKILL.md
.codex/skills/aida-digest/: SKILL.md
.codex/skills/aida-implement/: SKILL.md
.codex/skills/aida-import-plan/: SKILL.md
.codex/skills/aida-plan/: SKILL.md
.codex/skills/aida-recover/: SKILL.md
.codex/skills/aida-review/: SKILL.md
docs/agents/: antigravity-mcp-setup.md  codex-mcp-roundtrip-verdict.md  codex-mcp-setup.md  cross-agent-onboarding.md
docs/aida/: 2026-05-24-charts-overnight-brief.md  2026-05-24-killer-demo-script.md  2026-05-25-agy-charts-arch.md  2026-05-25-claude-charts-arch.md  2026-05-25-codex-charts-arch.md  2026-05-26-codex-system-improvement-audit.md  advisor-bootstrap-2026-05-24.md
docs/aida/2026-05-25-claude-charts-screenshots/: README.md
docs/aida/2026-05-25-claude-charts-v2-screenshots/: README.md
docs/plans/: 2026-05-24-epic-16-aida-chat-evolution.md
examples/: charts_smoke.rs  mcp_smoke.rs  traces_smoke.rs
objects/ADR/000/: ADR-6.yaml  ADR-7.yaml
objects/BUG/000/: BUG-009.yaml  BUG-28.yaml
objects/EPIC/000/: EPIC-1.yaml  EPIC-16.yaml  EPIC-26.yaml  EPIC-29.yaml  EPIC-8.yaml
objects/META/000/: META-001.yaml  META-002.yaml  META-003.yaml  META-004.yaml  META-005.yaml  META-006.yaml
objects/STORY/000/: STORY-10.yaml  STORY-11.yaml  STORY-12.yaml  STORY-13.yaml  STORY-14.yaml  STORY-15.yaml  STORY-17.yaml  STORY-18.yaml  STORY-19.yaml  STORY-2.yaml  STORY-20.yaml  STORY-21.yaml  STORY-22.yaml  STORY-23.yaml  STORY-24.yaml  STORY-25.yaml  STORY-3.yaml  STORY-4.yaml  STORY-5.yaml  STORY-9.yaml
objects/TASK/000/: TASK-007.yaml  TASK-008.yaml  TASK-27.yaml  TASK-30.yaml  TASK-31.yaml  TASK-32.yaml  TASK-33.yaml
registry/: blocks.yaml  nodes.toml
src/: app.rs  lib.rs  main.rs  messages.rs
src/server/: agent.rs  api.rs  canned.rs  config.rs  mod.rs  query_log.rs  sessions.rs
src/server/backends/: anthropic.rs  claude_cli.rs  mod.rs
src/server/charts/: data.rs  mod.rs  store.rs  svg.rs
src/server/mcp/: client.rs  mod.rs  protocol.rs
src/server/tools/: aida.rs  charts.rs  drift.rs  fs.rs  grep.rs  memory.rs  mod.rs  traces.rs
style/: main.css
